--- a/index.html
+++ b/index.html
@@ -1,10 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>Programming Website</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+
+		header {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+		}
+
+		h1 {
+			font-size: 36px;
+			margin: 0;
+		}
+
+		nav {
+			background-color: #eee;
+			padding: 10px;
+		}
+
+		nav ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+
+		nav li {
+			display: inline-block;
+			margin-right: 20px;
+		}
+
+		nav a {
+			color: #333;
+			text-decoration: none;
+			font-size: 18px;
+			padding: 5px;
+			border-radius: 5px;
+			transition: background-color 0.2s ease;
+		}
+
+		nav a:hover {
+			background-color: #333;
+			color: #fff;
+		}
+
+		section {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+		}
+
+		section h2 {
+			font-size: 24px;
+			margin: 0;
+		}
+
+		section p {
+			font-size: 18px;
+			line-height: 1.5;
+		}
+
+		footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+
+		footer p {
+			font-size: 18px;
+			margin: 0;
+		}
+	</style>
 </head>
 <body>
-	<h1>Welcome to My Website</h1>
-	<p>Test</p>
-</body>
+	<header>
+		<h1>Ex Machina</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			
+			<li><a href="#">Projects</a></li>
+			<li><a href="#">Resources</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h2>Welcome to Ex Machina</h2>
+		<p>ex machina (noun): a Latin phrase meaning "from the machine." </p>
+	</section>
+	<footer>
+		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
+	</footer>
 </html>
