--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Programming Website</title>
 	<style>
 img {
-  display: block; /* Make the image a block element */
-  margin: 0 auto; /* Center the image horizontally */
-  width: 80%; /* Set the width to 80% of the parent container */
+  display: block; 
+  margin: 0 auto; 
+  width: 80%;
 }
 		body {
 			font-family: Arial, sans-serif;
@@ -82,6 +82,9 @@ img {
 			font-size: 18px;
 			margin: 0;
 		}
+h1,h2,p {
+text-align: center;
+}
 	</style>
 </head>
 <body>
