--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ text-align: center;
 		<ul>
 			<li><a href="#">Home</a></li>
 			
-			<li><a href="homo">Projects</a></li>
+			<li><a href="homo.html">Projects</a></li>
 			<li><a href="#">Resources</a></li>
 		</ul>
 	</nav>
