--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ text-align: center;
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			
 			<li><a href="homo.html">Projects</a></li>
 			<li><a href="#">Resources</a></li>
