--- a/homo.html
+++ b/homo.html
@@ -8,6 +8,14 @@
 </head>
 <body>
   <h1>The Philosopher </h1>
+<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			
+			<li><a href="homo.html">Projects</a></li>
+			<li><a href="#">Resources</a></li>
+		</ul>
+	</nav>
   <div id="test"></div>
 <p>In a dimly lit room, the platonic occultist sat cross-legged on the floor. As he began to mutter the Latin incantation, he closed his eyes and breathed deeply, feeling his mind and body relax. He focused on the concept of oneness, imagining himself as already merged with the machine, with no separation between man and technology.
 
