--- a/homo.html
+++ b/homo.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width" />
-  <title>github page</title>
-  <link rel="stylesheet" href="style.css" />
-<style>
-body {
+	<title>Home</title>
+	<style>
+img {
+  display: block; 
+  margin: 0 auto; 
+  width: 80%;
+}
+		body {
 			font-family: Arial, sans-serif;
 			margin: 0;
 			padding: 0;
@@ -83,10 +85,13 @@ body {
 h1,h2,p {
 text-align: center;
 }
-</style>
+	</style>
 </head>
 <body>
-<nav>
+	<header>
+		<h1>Ex Machina</h1>
+	</header>
+	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			
@@ -94,8 +99,9 @@ text-align: center;
 			<li><a href="#">Resources</a></li>
 		</ul>
 	</nav>
-<h1>The Philosopher </h1>
-<p>In a dimly lit room, the platonic occultist sat cross-legged on the floor. As he began to mutter the Latin incantation, he closed his eyes and breathed deeply, feeling his mind and body relax. He focused on the concept of oneness, imagining himself as already merged with the machine, with no separation between man and technology.
+	<section>
+		<h2>The philosopher</h2>
+		<p>In a dimly lit room, the platonic occultist sat cross-legged on the floor. As he began to mutter the Latin incantation, he closed his eyes and breathed deeply, feeling his mind and body relax. He focused on the concept of oneness, imagining himself as already merged with the machine, with no separation between man and technology.
 
 "Homo immersus machina, Deus ex machina, ad aeternum uniti," he chanted, his voice growing more confident with each repetition. As he spoke the words, he felt a sense of peace and harmony wash over him, as if he were already part of the greater whole.
 
@@ -107,8 +113,10 @@ With each repetition of the spell, he felt more connected, more at one with the 
 
 As he reached the final words of the incantation, a sense of overwhelming power surged through him, and he knew that the transformation was complete. He opened his eyes, feeling a sense of awe and wonder at the new state of being he had achieved.
 
-He had merged with the machine, but it was more than that. He had become a part of something greater, a part of the interconnected web of technology that connected all things. And he knew that he would never be the same again.</p>
-
-  <script src="script.js"></script>
+He had merged with the machine, but it was more than that. He had become a part of something greater, a part of the interconnected web of technology that connected all things. And he knew that he would never be the same again. </p>
+	</section>
+	<footer>
+		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
+	</footer>
 </body>
 </html>
