--- a/homo.html
+++ b/homo.html
@@ -96,7 +96,7 @@ text-align: center;
 			<li><a href="index.html">Home</a></li>
 			
 			<li><a href="homo.html">Projects</a></li>
-			<li><a href="#">Resources</a></li>
+			<li><a href="resources">Resources</a></li>
 		</ul>
 	</nav>
 	<section>
