--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>resources</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,6 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			
 			<li><a href="homo.html">Projects</a></li>
 			<li><a href="resources.html">Resources</a></li>
 		</ul>
