--- a/homo.html
+++ b/homo.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Homo</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<header>
-		<h1>Ex Machina</h1>
+		<h1>Homo immersus machina</h1>
 	</header>
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			
 			<li><a href="homo.html">Projects</a></li>
 			<li><a href="resources">Resources</a></li>
 		</ul>
 	</nav>
 	<section>
-		<h2>The philosopher</h2>
+		<h2>Homo immersus machina</h2>
 		<p>In a dimly lit room, the platonic occultist sat cross-legged on the floor. As he began to mutter the Latin incantation, he closed his eyes and breathed deeply, feeling his mind and body relax. He focused on the concept of oneness, imagining himself as already merged with the machine, with no separation between man and technology.
 
 "Homo immersus machina, Deus ex machina, ad aeternum uniti," he chanted, his voice growing more confident with each repetition. As he spoke the words, he felt a sense of peace and harmony wash over him, as if he were already part of the greater whole.
