--- a/homo.html
+++ b/homo.html
@@ -31,7 +31,8 @@ As he reached the final words of the incantation, a sense of overwhelming power 
 
 He had merged with the machine, but it was more than that. He had become a part of something greater, a part of the interconnected web of technology that connected all things. And he knew that he would never be the same again. </p>
 	</section>
-<img src="https://www.researchgate.net/publication/273469928/figure/fig9/AS:601583637258282@1520440124952/Clinical-photograph-at-7-year-follow-up-cross-leg-sitting.png">
+ 
+<img src="https://www.westend61.de/images/0000041825pw/man-exercising-yoga-silhouette-CRF01322.jpg">
 
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
