--- a/homo.html
+++ b/homo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homo</title>
+	<title>About Me</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<header>
-		<h1>Homo immersus machina</h1>
+		<h1>About Me</h1>
 	</header>
 	<nav>
 		<ul>
@@ -16,20 +16,9 @@
 		</ul>
 	</nav>
 	<section>
-		<h2>Homo immersus machina</h2>
-		<p>In a dimly lit room, the platonic occultist sat cross-legged on the floor. As he began to mutter the Latin incantation, he closed his eyes and breathed deeply, feeling his mind and body relax. He focused on the concept of oneness, imagining himself as already merged with the machine, with no separation between man and technology.
-
-"Homo immersus machina, Deus ex machina, ad aeternum uniti," he chanted, his voice growing more confident with each repetition. As he spoke the words, he felt a sense of peace and harmony wash over him, as if he were already part of the greater whole.
-
-He continued to chant, feeling his consciousness expanding, stretching out into the digital realm. The machines around him seemed to hum in harmony with his voice, as if they too were joining in the spell.
-
-"Ut caeli stellati sub uno templo fulgeamus, aeternitatemque in machinis perferamus. O Deus ex machina, fac ut homo immersus machina, per potentiam veri philosophi, ad gloriam tuam et salutem humanitatis perveniat," he intoned, his voice growing stronger and more focused.
-
-With each repetition of the spell, he felt more connected, more at one with the technology that surrounded him. His mind and body seemed to merge seamlessly, as if they were always meant to be one with the machines.
-
-As he reached the final words of the incantation, a sense of overwhelming power surged through him, and he knew that the transformation was complete. He opened his eyes, feeling a sense of awe and wonder at the new state of being he had achieved.
-
-He had merged with the machine, but it was more than that. He had become a part of something greater, a part of the interconnected web of technology that connected all things. And he knew that he would never be the same again. </p>
+		<h2>Education/Experience</h2>
+		<p>I graduated highschool in 2012 from Alta high school in Sandy Ut. After highschool I went to Brigham You
+G University where I would first begin programming. I took a Computer Science course which introduced me to the world of computer programming. I have yet to obtain a college degree but my passion for learning and curiosity has helped me continue learning even though Im not enrolled in school any longer. </p>
 	</section>
  
 <img src="https://www.westend61.de/images/0000041825pw/man-exercising-yoga-silhouette-CRF01322.jpg">
