--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="homo.html">Projects</a></li>
-			<li><a href="resources.html">Resources</a></li>
+			<li><a href="homo.html">About Me</a></li>
+<li><a href="homo.html">Projects</a></li>
+			<li><a href="resources.html">Contact</a></li>
 		</ul>
 	</nav>
 	<section>
