--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Projects</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+	<header>
+		<h1>Projects</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="homo.html">About Me</a></li>
+<li><a href="projects.html">Projects</a></li>
+			<li><a href="resources.html">Contact</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h2>My Projects</h2>
+		<p> Select a project from the list to learn more about it. Don't hesitate to contact me(see contact page)for more details regarding any of the projects as well!. </p>
+	</section>
+	<footer>
+		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
+	</footer>
+</body>
+</html>
