Update and rename homo.html to aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="homo.html">About Me</a></li>
-<li><a href="homo.html">Projects</a></li>
+<li><a href="projects.html">Projects</a></li>
 			<li><a href="resources">Contact</a></li>
 		</ul>
 	</nav>
