--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="homo.html">About Me</a></li>
+			<li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
 			<li><a href="resources.html">Contact</a></li>
 		</ul>
