--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
-			<li><a href="resources.html">Contact</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	<section>
