--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,12 @@
 		<h2>My Projects</h2>
 		<p> Select a project from the list to learn more about it. Don't hesitate to contact me(see contact page)for more details regarding any of the projects as well!. </p>
 	</section>
+ <label for="dropdown">Select an Project:</label>
+    <select id="dropdown">
+      <option value="option1">AI Chat Bot</option>
+      <option value="option2">Coding Educational platform</option>
+      <option value="option3">Essential News Tracker</option>
+    </select>
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
