--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 		<h2>My Projects</h2>
 		<p> Select a project from the list to learn more about it. Don't hesitate to contact me(see contact page)for more details regarding any of the projects as well!. </p>
 	</section>
- <label for="dropdown">Select an Project:</label>
+ <label for="dropdown">Select a Project:</label>
     <select id="dropdown">
       <option value="option1">AI Chat Bot</option>
       <option value="option2">Coding Educational platform</option>
