--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,31 @@
       <option value="option2">Coding Educational platform</option>
       <option value="option3">Essential News Tracker</option>
     </select>
+
+<div id="description"></div>
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
 	</footer>
+
+<script>
+  function updateDescription() {
+    // Get the selected option value and text
+    var dropdown = document.getElementById("dropdown");
+    var value = dropdown.value;
+    var text = dropdown.options[dropdown.selectedIndex].text;
+    
+    // Update the description element based on the selected option
+    var description = document.getElementById("description");
+    if (value === "option1") {
+      description.innerHTML = "This project is an AI chat bot that uses natural language processing to communicate with users.";
+    } else if (value === "option2") {
+      description.innerHTML = "This project is a coding educational platform that provides interactive coding tutorials and challenges.";
+    } else if (value === "option3") {
+      description.innerHTML = "This project is an essential news tracker that aggregates and summarizes news articles from around the world.";
+    } else {
+      description.innerHTML = "";
+    }
+  }
+</script>
 </body>
 </html>
