--- a/projects.html
+++ b/projects.html
@@ -44,9 +44,9 @@
     if (value === "option1") {
       description.innerHTML = "This project is an AI chat bot that uses natural language processing to communicate with users.";
     } else if (value === "option2") {
-      description.innerHTML = "This project is a coding educational platform that provides interactive coding tutorials and challenges.";
+      description.innerHTML = "This project is a coding educational platform that provides a coding dictionary and step by step walk throughs.";
     } else if (value === "option3") {
-      description.innerHTML = "This project is an essential news tracker that aggregates and summarizes news articles from around the world.";
+      description.innerHTML = "This project is intended to make digesting the news simpler by fetching a priortized summary of daily or weekly events.";
     } else {
       description.innerHTML = "";
     }
