--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</nav>
 	<section>
 		<h2>Welcome to My Website!</h2>
-		<p> The theme of my website is Ex Machina is not only the name of my favorite movie but is a Latin phrase meaning "from the machine." I chose it as the theme for my website because it sums up my fascination with technology as the world is just beginning to experience what remarkable things can come "from the machine" as humans continue to perfect technology and technology continues to perfect humans by making us infinitely more productive and more capable in all fields. </p>
+		<p> The theme of my website is Ex Machina not only because it's the name of my favorite movie but it's deeper meaning. It is a Latin phrase meaning "from the machine." I chose it as the theme for my website because it sums up my fascination with technology. The world is just beginning to experience what remarkable things can come "from the machine" as humans continue to perfect technology and technology continues to perfect humans by making us infinitely more productive and more capable in all fields. </p>
 <p> My name is Steven Miller and I am excited to showcase my coding abilities through this online platform. This website serves as a personal portfolio and resume, which highlights my expertise and experience in various fields of coding.
 
 As a passionate coder, I have spent countless hours perfecting my craft and developing new skills. This website provides me with a platform to showcase my coding work to potential employers, clients, and collaborators. It also serves as an online hub to connect with like-minded individuals, share ideas, and contribute to the coding community. </p>
