--- a/chatbot.html
+++ b/chatbot.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Chatbot</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+ <script src="script.js"></script>
+</head>
+<body>
+	<header>
+		<h1>Chatbot</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="aboutme.html">About Me</a></li>
+<li><a href="projects.html">Projects</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h2></h2>
+		<p> </p>
+	</section>
 
+<div id="chat-window">
+  <div id="output"></div>
+  <input type="text" id="input" placeholder="Type your message...">
+</div>
+
+<footer>
+  <p>&copy; 2023 Ex Machina. All rights reserved.</p>
+</footer>
+</body>
+</html>
