--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
 			<li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
 			<li><a href="contact.html">Contact</a></li>
+<li><a href="chatbot.html">Chatbot</a></li>
 		</ul>
 	</nav>
 	<section>
