--- a/chatbot.html
+++ b/chatbot.html
@@ -25,8 +25,8 @@
 <div id="chat-window">
   <div id="output"></div>
   <input type="text" id="input" placeholder="Type your message...">
+  <button id="submit-button">Submit</button>
 </div>
-
 <footer>
   <p>&copy; 2023 Ex Machina. All rights reserved.</p>
 </footer>
