--- a/chatbot.html
+++ b/chatbot.html
@@ -21,12 +21,13 @@
 		<h2></h2>
 		<p> </p>
 	</section>
-
 <div id="chat-window">
   <div id="output"></div>
   <input type="text" id="input" placeholder="Type your message...">
   <button id="submit-button">Submit</button>
+  <div id="response"></div>
 </div>
+
 <footer>
   <p>&copy; 2023 Ex Machina. All rights reserved.</p>
 </footer>
