--- a/chatbot.html
+++ b/chatbot.html
@@ -23,10 +23,13 @@
 	</section>
 <div id="chat-window">
   <div id="output"></div>
-  <input type="text" id="input" placeholder="Type your message...">
-  <button id="submit-button">Submit</button>
+  <div id="input-container">
+    <input type="text" id="input" placeholder="Type your message...">
+    <button id="submit-button">Submit</button>
+  </div>
   <div id="response"></div>
 </div>
+
 
 <footer>
   <p>&copy; 2023 Ex Machina. All rights reserved.</p>
