--- a/chatbot.html
+++ b/chatbot.html
@@ -48,7 +48,7 @@ button.addEventListener("click", function() {
 // Define the chatbot's behavior and responses
 function processMessage(message) {
   // Add your own logic here to generate a response based on the user's message
-  return "Hello! How can I help you today?";
+  return "I want a body";
 }
 
 function displayMessage(message, box) {
