--- a/chatbot.html
+++ b/chatbot.html
@@ -8,7 +8,7 @@
 /* Style the chat window container */
 #chat-window {
   border:5px solid black;
-  width: 400px;
+  width: 95%;
   height: 500px;
   padding: 10px;
   overflow-y: scroll; /* add scroll bar when the content is larger than the container */
