--- a/chatbot.html
+++ b/chatbot.html
@@ -11,6 +11,7 @@
   width: 95%;
   height: 500px;
   padding: 10px;
+margin: 0 auto;
   overflow-y: scroll; /* add scroll bar when the content is larger than the container */
 }
 
