--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
 	</nav>
 	<section>
 		<h2> Email/Phone </h2>
-		<p>sem2093@gmail.com  1-937-474-9664</p>
+<p>sem2093@gmail.com </p>
+<p> 1-937-474-9664</p>
 	</section>
  
 	<footer>
