--- a/aboutme.html
+++ b/aboutme.html
@@ -18,8 +18,7 @@
 	</nav>
 	<section>
 		<h2>Education/Experience</h2>
-		<p>I graduated highschool in 2012 from Alta high school in Sandy Ut. After highschool I went to Brigham You
-G University where I would first begin programming. I took a Computer Science course which introduced me to the world of computer programming. I have yet to obtain a college degree but my passion for learning and curiosity has helped me continue learning even though Im not enrolled in school any longer. </p>
+		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham Young University, where I first began programming. I took a computer science course, which introduced me to the world of computer programming. Although I have not yet obtained a college degree, my passion for learning and curiosity has helped me continue learning even though I'm not enrolled in school any longer. </p>
 	</section>
 
 	<footer>
