--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Resources</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+	<header>
+		<h1>Resources</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="aboutme.html">About Me</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="resources.html">Resources</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h2> Links: </h2>
+
+	</section>
+ 
+	<footer>
+		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
+	</footer>
+</body>
+</html>
