--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
+<li><a href="resources.html">Resources</a></li>
 			<li><a href="contact.html">Contact</a></li>
 
 		</ul>
