--- a/chatbot.html
+++ b/chatbot.html
@@ -58,6 +58,7 @@ margin: 0 auto;
 			<li><a href="index.html">Home</a></li>
 			<li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
+<li><a href="resources.html">Resources</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
