--- a/aboutme.html
+++ b/aboutme.html
@@ -14,6 +14,7 @@
 			<li><a href="homo.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
 <li><a href="resources.html">Resources</a></li>
+<li><a href="tech.html">Technology</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
