--- a/chatbot.html
+++ b/chatbot.html
@@ -59,6 +59,7 @@ margin: 0 auto;
 			<li><a href="aboutme.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
 <li><a href="resources.html">Resources</a></li>
+<li><a href="tech.html">Technology</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
