--- a/resources.html
+++ b/resources.html
@@ -21,6 +21,8 @@
 	</nav>
 	<section>
 		<h2> Links: </h2>
+		<a href="https://chat.openai.com">Open AIs Chat GPT</a>
+<a href="https://github.com">GitHub Home</a>
 
 	</section>
  
