--- a/tech.html
+++ b/tech.html
@@ -20,8 +20,13 @@
 	</nav>
 	<section>
 		<h2> Innovations: </h2>
-
-	</section>
+<p> 
+ChatGPT is a language model developed by OpenAI. It is based on the GPT (Generative Pre-trained Transformer) architecture, specifically GPT-3.5. It is designed to generate human-like text responses and engage in conversational interactions with users.
+ChatGPT is trained on a vast amount of diverse text data, allowing it to understand and generate coherent responses in natural language. It leverages deep learning techniques, specifically transformers, to process and generate text.
+The model can be used in a variety of applications, such as chatbots, virtual assistants, customer support systems, and more. It can understand and generate responses to questions, provide explanations, offer suggestions, and engage in interactive conversations.
+It's important to note that ChatGPT, like other language models, generates responses based on patterns and information in its training data. While it can provide helpful information, it may also occasionally produce incorrect or nonsensical answers. It's always a good practice to critically evaluate the generated responses and verify information from reliable sources when needed. To try out Chat GPT visit resources page. 
+</p>
+</section>
  
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
