--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,10 @@
 <p>sem2093@gmail.com </p>
 <p> 1-937-474-9664</p>
 		<a href="https://www.twitter.com/@sem2093">
-  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter">
+  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter"style="width: 20px; height: 20px;">
 </a>
 <a href="https://www.instagram.com/@sem209378">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram">
-</a>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram"style="width: 20px; height: 20px;">
 	</section>
  
 	<footer>
