--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,9 @@
 </a>
 <a href="https://www.instagram.com/@sem209378">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram"style="width: 100px; height: 100px;">
+	<a href="https://m.facebook.com/profile.php?id=100008629298322">
+ <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook"style="width: 100px; height: 100px;">
+	
 	</section>
  
 	<footer>
