--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,9 @@
 	</nav>
 	<section>
 		<h2> Email/Phone </h2>
-<p>sem2093@gmail.com </p>
-<p> 1-937-474-9664</p>
+<p class="email">sem2093@gmail.com</p>
+<p class="phone">1-937-474-9664</p>
+
 		<a href="https://www.twitter.com/@sem2093">
   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter"style="width: 100px; height: 100px;">
 </a>
