--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 		</ul>
 	</nav>
 	<section>
-		<h2> Email/Phone </h2>
+		<h2> Email/Phone/Social</h2>
 <p class="email">sem2093@gmail.com</p>
 <p class="phone">1-937-474-9664</p>
 
