--- a/tech.html
+++ b/tech.html
@@ -20,7 +20,8 @@
 	</nav>
 	<section>
 		<h2> Innovations: </h2>
-<p> 
+		<h3> Chat GPT</h3>
+		<p> 
 ChatGPT is a language model developed by OpenAI. It is based on the GPT (Generative Pre-trained Transformer) architecture, specifically GPT-3.5. It is designed to generate human-like text responses and engage in conversational interactions with users.
 ChatGPT is trained on a vast amount of diverse text data, allowing it to understand and generate coherent responses in natural language. It leverages deep learning techniques, specifically transformers, to process and generate text.
 The model can be used in a variety of applications, such as chatbots, virtual assistants, customer support systems, and more. It can understand and generate responses to questions, provide explanations, offer suggestions, and engage in interactive conversations.
