--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Ex Machina</h1>
+		<h1>Home</h1>
 	</header>
 	<nav>
 		<ul>
@@ -19,7 +19,7 @@
 		</ul>
 	</nav>
 	<section>
-		<h2>Welcome to My Website!</h2>
+		<h2>Welcome</h2>
 		<p> The theme of my website is Ex Machina not only because it's the name of my favorite movie but it's deeper meaning. It is a Latin phrase meaning "from the machine." I chose it as the theme for my website because it sums up my fascination with technology. The world is just beginning to experience what remarkable things can come "from the machine" as humans continue to perfect technology and technology continues to perfect humans by making us infinitely more productive and more capable in all fields. </p>
 <p> My name is Steven Miller and I am excited to showcase my coding abilities through this online platform. This website serves as a personal portfolio and resume, which highlights my expertise and experience in various fields of coding.
 
