--- a/aboutme.html
+++ b/aboutme.html
@@ -10,17 +10,17 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="homo.html">About Me</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="homo.html">About Me</a></li>
 <li><a href="projects.html">Projects</a></li>
 <li><a href="resources.html">Resources</a></li>
 <li><a href="tech.html">Technology</a></li>
-			<li><a href="contact.html">Contact</a></li>
+<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	<section>
-		<h2>Education/Experience</h2>
-		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham Young University, where I first began programming. I took a computer science course, which introduced me to the world of computer programming. Although I have not yet obtained a college degree, my passion for learning and curiosity has helped me continue learning even though I'm not enrolled in school any longer. </p>
+		<h2>Education & Experience</h2>
+		<p>I graduated high school in 2012 from Alta High School in Sandy, UT. After high school, I went to Brigham Young University, where I first began programming. I took a computer science course, which introduced me to the world of computer programming. Although I have not yet obtained a college degree, my passion for learning and curiosity has helped me continue learning even though I'm not enrolled in school any longer.Ive held many jobs such as customer service representative, fire alarm and security technician, and sea food processor. As for professional licenses I held a Master Fire Alarm Technician license in the state of Utah. I hope to one day secure a job in the tech industry. For the time being I will aim to become a professional coder and hence will further my skills in that direction. <p>
 	</section>
 
 	<footer>
