--- a/resources.html
+++ b/resources.html
@@ -30,6 +30,9 @@
 <a href="https://github.com">GitHub Home</a>
 
 	</section>
+	<div>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDGYw1bV2heQ4ouCKv-uCzEiPdCTTib68JaJxMjePZ0g&s" alt="Alicia Vikander PNG">
+	</div>
  
 	<footer>
 		<p>&copy; 2023 Ex Machina. All rights reserved.</p>
